[Estructura] Compartir en redes sociales.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,6 +49,18 @@
   border-radius: 4px;
 }
 
+.user-avatar {
+  width: 32px;  /* Ajusta el tamaño de la imagen */
+  height: 32px; /* Ajusta el tamaño de la imagen */
+  border-radius: 50%; /* Redondear la imagen para que parezca un avatar */
+  cursor: pointer;
+}
+
+.user-avatar:hover {
+  opacity: 0.8; /* Efecto hover para hacer el ícono un poco más oscuro */
+}
+
+
 /* Estilos para el menú hamburguesa */
 @media (max-width: 768px) {
   .navbar-list {
