--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,19 +61,6 @@ body, html {
   border-radius: 4px;
 }
 
-.user-avatar {
-  width: 32px;  /* Ajusta el tamaño de la imagen */
-  height: 32px; /* Ajusta el tamaño de la imagen */
-  border-radius: 50%; /* Redondear la imagen para que parezca un avatar */
-  cursor: pointer;
-}
-
-.user-avatar:hover {
-  opacity: 0.8; /* Efecto hover para hacer el ícono un poco más oscuro */
-}
-
-
-/* Estilos para el menú hamburguesa */
 /* Contenido principal */
 .App-main {
   flex: 1;
@@ -81,13 +68,14 @@ body, html {
 }
 
 /* Estilos para las tarjetas de perros */
-
-
-.dog-card {
+.dog-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
+}
+
+.dog-card {
   width: 300px;
   border: 1px solid #ddd;
   border-radius: 8px;
