--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 /* Fondo en un color café claro */
 body {
-  background-color: #f8f2e6; /* Un café claro que no sea demasiado plano */
-  color: #4a3c2a; /* Un color café oscuro para el texto */
+  background-color: #fdfbf8; /* Un café claro que no sea demasiado plano */
+  color: #4e402e; /* Un color café oscuro para el texto */
   margin: 0; /* Elimina márgenes del body */
 }
 
@@ -9,7 +9,6 @@ body {
 /* Contenedor principal */
 .home-container {
   text-align: center;
-  padding: 20px;
   width: 100%; /* Asegúrate de que el contenedor use todo el ancho disponible */
 }
 
@@ -18,35 +17,77 @@ body {
 h1 {
   font-size: 2.5rem;
   color: #4a3c2a; /* Café oscuro */
-  text-shadow: 1px 1px 2px rgba(255, 140, 0, 0.6); /* Sombra de texto suave */
+  /* text-shadow: 1px 1px 2px rgba(255, 140, 0, 0.6); Sombra de texto suave */
+}
+
+.image-home {
+  margin: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.4;
+  top: 0;
+  left: 0px;
+  z-index: -1;
+}
+
+.overlay {
+  height: 50rem;
+  margin: 0
 }
 
 /* Contenedor de tarjetas */
 .perros-container {
+  background-color: red;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center; /* O puedes usar `space-between` o `space-around` para distribuir mejor */
   width: 100%; /* Asegúrate de que el contenedor ocupe el 100% del espacio */
+  /* padding: 0.3rem 2rem 2rem 2rem; */
 }
+
 
 
 /* Tarjetas de perros */
 .perro-card {
   background-color: #ffffff; /* Blanco para resaltar */
-  border-radius: 15px;
+  border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
   padding: 20px;
   flex: 1 1 200px; /* Esto está bien, pero considera agregar un max-width */
+  min-width: 250px;
   max-width: 300px; /* Establece un ancho máximo para las tarjetas */
-  margin: 10px; /* Agrega un margen para evitar que se peguen */
+  margin: 15px; /* Agrega un margen para evitar que se peguen */
 }
 
+.perro-card h3 {
+  padding-bottom: 13px;
+}
+
+.perro-card p {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 6px;
+}
+
+.perro-card strong {
+  font-size: 10px;
+  border: 0px;
+  margin: 0px;
+}
+
+.perro-card div {
+  border: 0px;
+  margin: 0px;
+}
 
 .perro-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más marcada al hacer hover */
-  border: 2px solid #ff8c00; /* Borde naranja al hacer hover */
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); /* Sombra más marcada al hacer hover */
+  border: 1px solid #462f1054; 
 }
 
 /* Imagen de perros */
@@ -54,6 +95,7 @@ h1 {
   width: 100%;
   border-radius: 15px;
   margin-bottom: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 /* Texto en las tarjetas */
@@ -113,4 +155,8 @@ p {
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 15px;
+}
+
+.slider-container {
+  background-color: red;
 }
