--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -26,7 +26,7 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.4;
+  opacity: 0.6;
   top: 0;
   left: 0px;
   z-index: -1;
@@ -34,12 +34,47 @@ h1 {
 
 .overlay {
   height: 50rem;
-  margin: 0
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  margin-top: 3rem;
+}
+
+.text-home {
+  color: black;
+  background-color: white;
+  width: 60%;
+  height: 10rem;
+  padding: 2rem 2rem 2rem 2rem;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.315);
+  border-radius: 20px;
+}
+
+.text-home h3 {
+  margin-bottom: 7px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 60%;
+  margin-top: 6rem;
+}
+
+.titulo-perros-container {
+  background-color: white;  
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  box-shadow: 0 -10px 50px rgba(0, 0, 0, 0.5);
 }
 
 /* Contenedor de tarjetas */
 .perros-container {
-  background-color: red;
+  background-color: white;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -52,22 +87,23 @@ h1 {
 
 /* Tarjetas de perros */
 .perro-card {
-  background-color: #ffffff; /* Blanco para resaltar */
+  background-color: #fa9b2fb4; /* Blanco para resaltar */
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
   padding: 20px;
-  flex: 1 1 200px; /* Esto está bien, pero considera agregar un max-width */
-  min-width: 250px;
-  max-width: 300px; /* Establece un ancho máximo para las tarjetas */
-  margin: 15px; /* Agrega un margen para evitar que se peguen */
+  flex: 1 1 18rem; /* Esto está bien, pero considera agregar un max-width */
+  min-width: 10rem;
+  max-width: 22rem;
+  margin: 25px; /* Agrega un margen para evitar que se peguen */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 
 .perro-card h3 {
   padding-bottom: 13px;
 }
 
 .perro-card p {
-  background-color: red;
   display: flex;
   flex-direction: column;
   padding-bottom: 6px;
@@ -103,23 +139,29 @@ p {
   color: #4a3c2a; /* Texto en café oscuro para contraste */
 }
 
-/* Botones */
 .start-button {
-  background-color: #ff8c00; /* Naranja brillante */
+  margin-top: 3rem;
+}
+
+
+
+/* Botones */
+/* .start-button {
+  background-color: #ff8c00; 
   color: white;
   padding: 15px 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(255, 140, 0, 0.4); /* Sombra naranja suave */
+  box-shadow: 0 4px 8px rgba(255, 140, 0, 0.4); 
   cursor: pointer;
   margin-top: 30px;
   font-size: 1.2rem;
-  transition: background-color 0.3s, transform 0.3s; /* Transiciones suaves */
+  transition: background-color 0.3s, transform 0.3s; 
 }
 
 .start-button:hover {
-  background-color: #ff701f; /* Naranja más oscuro al hacer hover */
-  transform: translateY(-3px); /* Efecto de elevación en hover */
-}
+  background-color: #ff701f; 
+  transform: translateY(-3px); 
+} */
 
 /* Carrusel */
 .testimonials-container {
@@ -145,7 +187,7 @@ p {
 .testimonial-card:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  border: 2px solid #ff8c00; /* Borde naranja al hacer hover */
+  border: 1px solid #462f1054; 
 }
 
 /* Foto de testimonios */
@@ -158,5 +200,6 @@ p {
 }
 
 .slider-container {
-  background-color: red;
+  background-color: white;
+  padding-bottom: 2rem;
 }
