--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -4,12 +4,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5d5b2; /* Fondo beige-naranja claro */
   padding: 1rem; /* Añadir un poco de padding en móviles */
 }
 
 .register-form {
-  background-color: white; /* Fondo blanco para el formulario */
   padding: 2rem;
   border-radius: 10px; /* Bordes ligeramente más redondeados */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra más pronunciada */
@@ -17,49 +15,42 @@
   max-width: 400px; /* Limitar ancho máximo */
   display: flex;
   flex-direction: column;
+  background-color: #ffffff25;
+  backdrop-filter: blur(20px);
+  text-align: center;
 }
 
 .register-form h2 {
-  color: #6f4e37; /* Color café */
-  text-align: center;
+  color: #4a3c2a; /* #6f4e37 Color café para el título */
   margin-bottom: 1.5rem;
-  font-size: 1.8rem; /* Tamaño de fuente mayor */
+  font-size: 1.8rem; /* Tamaño más grande */
   font-weight: bold;
 }
 
 .register-form input {
   width: 100%;
-  padding: 0.75rem;
-  margin-bottom: 1rem;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  background-color: #fae5d3; /* Tono claro, acorde a la paleta */
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  padding: 0.8rem;
+  margin-bottom: 1.2rem;
+  border: 1px solid #dddddd00;
+  border-radius: 10px;
+  background-color: #0000002c;
+  color: white;
+  transition: border-color 0.5s ease, box-shadow 0.4s ease, transform 0.5s ease-in;
+}
+
+.register-form input::placeholder {
+  color: rgba(255, 255, 255, 0.712);
+  opacity: 0.65;
 }
 
 .register-form input:focus {
   outline: none;
-  border-color: #ee6d0a; /* Naranja vibrante */
-  box-shadow: 0 0 5px rgba(238, 109, 10, 0.5); /* Sombra suave en naranja */
+  border-color: #ee6d0a;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.473); 
+  transform: scale(1.01);
 }
 
-.register-form button {
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #ee6d0a; /* Naranja vibrante */
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.register-form button:hover {
-  background-color: #d35f05; /* Naranja más oscuro */
-  transform: translateY(-2px); /* Efecto de elevación en hover */
-}
+/* .register-form button {} */
 
 .login-prompt {
   text-align: center;
@@ -102,4 +93,14 @@
   .register-form button {
     font-size: 0.9rem; /* Ajustar el tamaño del texto en el botón */
   }
+}
+
+
+.iniciar-sesion-text a{
+  transition: transform 0.4s ease, filter 0.4s ease;
+}
+
+.iniciar-sesion-text a:hover {
+  transform: scale(1.11);
+  filter: brightness(130%);
 }
