--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -69,7 +69,6 @@ h1 {
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(20px);
   width: 60%;
-  height: 10rem;
   padding: 2rem 2rem 2rem 2rem;
   box-shadow: 0 7px 15px rgba(0, 0, 0, 0.315);
   border-radius: 20px;
@@ -93,6 +92,9 @@ h1 {
   padding-bottom: 2rem;
   padding-top: 2rem;
   box-shadow: 0 -10px 50px rgba(0, 0, 0, 0.5);
+}
+.titulo-perros-container p {
+  text-align: center;
 }
 
 /* Contenedor de tarjetas */
@@ -119,6 +121,7 @@ h1 {
   max-width: 22rem;
   margin: 25px; /* Agrega un margen para evitar que se peguen */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: center;
 }
 
 
@@ -130,6 +133,7 @@ h1 {
   display: flex;
   flex-direction: column;
   padding-bottom: 6px;
+  align-items: center;
 }
 
 .perro-card strong {
@@ -209,4 +213,8 @@ p {
 .slider-container {
   background-color: white;
   padding-bottom: 2rem;
+}
+
+.slider-container h2 {
+  margin: 0px;
 }
