--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -158,7 +158,8 @@ h1 {
   width: 100%;
   border-radius: 20px 20px 0 0;
   margin-bottom: 15px;
-  /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
+  max-height: 15rem;
+  min-height: 12rem;
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.3);
   box-shadow: inset;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
