--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,6 +1,7 @@
 /* Fondo en un color café claro */
 body {
-  background-color: #fdfbf8; /* Un café claro que no sea demasiado plano */
+  /* background-color: #fdfbf8;  */
+  background-color: white;
   color: #4e402e; /* Un color café oscuro para el texto */
   margin: 0; /* Elimina márgenes del body */
 }
