--- a/frontend/src/components/PerfilPerro/PerfilPerro.css
+++ b/frontend/src/components/PerfilPerro/PerfilPerro.css
@@ -54,16 +54,17 @@
     text-align: left;
   }
   
-  h2 {
+ .perfil-perro h2 {
     color: #333;
     font-size: 1.5rem;
     margin-bottom: 10px;
+    text-align: center;
   }
   
-  p {
+  .perfil-perro p {
     color: #555;
     font-size: 1rem;
-    margin: 5px 0;
+    margin: 10px 0;
   }
   
   h3 {
