--- a/frontend/src/components/Contacto/Contacto.css
+++ b/frontend/src/components/Contacto/Contacto.css
@@ -1,50 +1,59 @@
+
 .contact-page {
-    padding: 20px;
-    max-width: 800px; /* Limita el ancho del contenedor para centrar el contenido */
-    margin: 0 auto; /* Centra la página */
-    line-height: 1.6; /* Mejora la legibilidad */
-    background-color: #f9f9f9; /* Fondo ligero para contraste */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para destacar la sección */
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 2em;
-    color: #333;
-  }
-  
-  h2 {
-    color: #555;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-size: 1.4em;
-  }
-  
-  p {
-    text-align: justify; /* Justifica el texto */
-    margin-bottom: 20px; /* Espaciado entre párrafos */
-    color: #444;
-  }
-  
-  .delete-button {
-    background-color: #ff4d4d;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  
-  .delete-button:hover {
-    background-color: #ff1a1a;
-  }
-  
-  .message {
-    margin-top: 10px;
-    color: green;
-    font-weight: bold;
-  }
-  
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  line-height: 1.6;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2em;
+  color: #333;
+}
+
+.faq-section {
+  margin-top: 30px;
+  padding: 15px;
+  border-left: 4px solid #007BFF;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+}
+
+.faq-title {
+  color: #555;
+  margin-bottom: 10px;
+  font-size: 1.4em;
+}
+
+
+.faq-content {
+  text-align: justify;
+  margin-bottom: 20px;
+  color: #444;
+}
+
+.delete-button {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  background-color: #ff1a1a;
+}
+
+/* Mensaje de confirmación o error */
+.message {
+  margin-top: 10px;
+  color: green;
+  font-weight: bold;
+}
