--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -171,6 +171,7 @@ h1 {
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.3);
   box-shadow: inset;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  object-fit: cover;
 }
 
 /* Texto en las tarjetas */
