--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -166,8 +166,8 @@ h1 {
   width: 100%;
   border-radius: 20px 20px 0 0;
   margin-bottom: 15px;
-  max-height: 15rem;
-  min-height: 12rem;
+
+  height: 13rem;
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.3);
   box-shadow: inset;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
