--- a/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
+++ b/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
@@ -4,9 +4,9 @@
         height: auto;
         margin: 1.5vw;
     }
-    .perro-card .perro-foto {
+    .perro-foto {
         width: 100%;
-        min-height: 16vh;
+        height: 8rem;
         box-shadow: none;
     }
     .perros-container {
