--- a/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
+++ b/frontend/src/components/PaginaPerroPerdido/PaginaPerroPerdido.css
@@ -25,4 +25,21 @@
         margin-bottom: 0px;
         font-size: 0.7rem;
     }
+    .whatsapp-button {
+        display: inline-block;
+        margin-top: 10px;
+        padding: 8px 12px;
+        background-color: #25d366;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+        border-radius: 5px;
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+      }
+      
+      .whatsapp-button:hover {
+        background-color: #1ebe5a;
+      }
+      
 }
