--- a/frontend/src/components/EditPerrito/EditPerro.css
+++ b/frontend/src/components/EditPerrito/EditPerro.css
@@ -65,7 +65,7 @@
 }
 
 button {
-  background-color: #FA9B2F;
+
   color: white;
   padding: 10px;
   border: none;
@@ -81,6 +81,11 @@ button:hover {
 
 button:focus {
   outline: none;
+}
+
+.boton-cambios{
+  background-color: #ffb055;
+  padding: 0.5rem;
 }
 
 .fa-arrow-left {
