--- a/frontend/src/components/PaginaPerroVisto/PaginaPerroVisto.css
+++ b/frontend/src/components/PaginaPerroVisto/PaginaPerroVisto.css
@@ -1,52 +1,58 @@
-.perro-visto-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-}
-
-.perro-visto-card {
-    margin: 5px 5px 5px 5px;
-    background-color: #0000001c;
-    display: flex;
+.perfil-user-container {
     max-width: 80vw;
     min-width: 50vw;
     width: 75vw;
-    min-width: 4rem;
-    height: 8rem;
+    margin: 1rem auto;
+    padding: 20px;
+    background-color: #0000001c; /* Fondo translúcido */
     border-radius: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: left;
     transition: transform 0.3s ease;
-}
-
-.perro-visto-foto {
-    max-width: 14rem;
-    height: 8rem;
-    max-height: 8rem;
-    border-radius: 20px;
-    object-fit: cover;
-}
-
-.perro-visto-card:hover  {
+  }
+  
+  .perfil-user-container:hover {
     cursor: pointer;
-    transform: scale(1.01);
-}
-
-.perro-visto-informacion {
+    transform: scale(1.01); /* Efecto de escala al pasar el cursor */
+  }
+  
+  .perfil-user-details {
+    line-height: 1.6;
     display: flex;
-    justify-content:space-around;
+    flex-direction: column;
     align-items: center;
-    width: 100%;
-    margin: 5px;
-}
-
-@media (max-width: 1100px) {
-    .perro-visto-card {
-        min-width: 90vw;
-        max-width: 95vw;
-        font-size: 0.8rem;
+    justify-content: space-around;
+  }
+  
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  p {
+    margin: 10px 0;
+    color: #555;
+  }
+  
+  strong {
+    color: #000;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  @media (max-width: 1100px) {
+    .perfil-user-container {
+      min-width: 90vw;
+      max-width: 95vw;
+      font-size: 0.9rem;
     }
-    .perro-visto-foto {
-        max-width: 30%;
-        min-width: 30%;
-    }
-}
+  }
+  
