Perfil de usuario v3 detalles

--- a/frontend/src/components/PerfilUser/perfilUser.css
+++ b/frontend/src/components/PerfilUser/perfilUser.css
@@ -1,30 +1,29 @@
 .perfil-user-container {
     max-width: 600px;
     margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 20px;
     padding: 20px;
-    border: 1px solid #ddd;
     border-radius: 8px;
-    background: linear-gradient(to right, #e5bf67, #de800c);  /* Degradado de la paleta */
+    background: linear-gradient(to right, #e5bf67, #de800c);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
 
 .perfil-user-details {
     line-height: 1.6;
-    color: #333;  /* Un color más oscuro para el texto */
+    color: #333;
 }
 
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #c35847;  /* Usando blanco para destacar el título en el degradado */
-    font-size: 2rem; /* Para que se vea más prominente */
-    white-space: nowrap;  /* Asegura que el texto no se rompa */
-    overflow: hidden;  /* Oculta el texto que no se ha mostrado aún */
-    border-right: 4px solid #c35847;  
-    width: fit-content; /* Ajusta el tamaño del contenedor al texto */
-    animation: typing 3s steps(30) 1s forwards, blink 0.75s step-end infinite; /* Animación de escritura */
+    color: #c35847;
+    font-size: 2rem;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 4px solid #c35847;
+    width: fit-content;
+    animation: typing 3s steps(30) 1s forwards, blink 0.75s step-end infinite;
 }
 
 @keyframes typing {
@@ -44,20 +43,20 @@ h2 {
 
 p {
     margin: 10px 0;
-    color: #f4f4f4; /* Color gris claro para párrafos */
+    color: #f4f4f4;
 }
 
 strong {
-    color:  #c35847;  /* Para resaltar los textos importantes */
+    color: #c35847;
 }
 
 a {
-    color: #fff;  
+    color: #fff;
 }
 
 a:hover {
     text-decoration: underline;
-    color: #c35847;  /* Color de enlace al pasar el mouse */
+    color: #c35847;
 }
 
 .perfil-user-image {
@@ -69,6 +68,6 @@ a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid #c35847;  /* Borde suave en color complementario */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);  /* Sombra más intensa para darle profundidad */
+    border: 2px solid #c35847;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
