--- a/frontend/src/components/EditPerrito/EditPerro.css
+++ b/frontend/src/components/EditPerrito/EditPerro.css
@@ -18,7 +18,7 @@
 
 .perro-foto {
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
   height: auto;
   border-radius: 8px;
   margin-bottom: 20px;
